k8s/signoz.yaml

apiVersion: v1
kind: Service
metadata:
  name: clickhouse
  namespace: ms
  labels:
    app: clickhouse
spec:
  ports:
  - port: 8123
    name: http
  - port: 9000
    name: tcp
  selector:
    app: clickhouse
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clickhouse
  namespace: ms
  labels:
    app: clickhouse
spec:
  selector:
    matchLabels:
      app: clickhouse
  template:
    metadata:
      labels:
        app: clickhouse
    spec:
      containers:
      - name: clickhouse
        image: clickhouse/clickhouse-server:25.5.6
        ports:
        - containerPort: 8123
        - containerPort: 9000
        volumeMounts:
        - name: clickhouse-config
          mountPath: /etc/clickhouse-server/config.xml
          subPath: config.xml
        - name: clickhouse-config
          mountPath: /etc/clickhouse-server/users.xml
          subPath: users.xml
        - name: clickhouse-data
          mountPath: /var/lib/clickhouse
      volumes:
      - name: clickhouse-config
        configMap:
          name: clickhouse-config
      - name: clickhouse-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: signoz
  namespace: ms
  labels:
    app: signoz
spec:
  ports:
  - name: ui
    port: 3301
    targetPort: 8080
  - name: api
    port: 8080
    targetPort: 8080
  selector:
    app: signoz
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signoz
  namespace: ms
  labels:
    app: signoz
spec:
  selector:
    matchLabels:
      app: signoz
  template:
    metadata:
      labels:
        app: signoz
    spec:
      containers:
      - name: signoz
        image: signoz/signoz:v0.103.0
        ports:
        - containerPort: 3301
        - containerPort: 8080
        volumeMounts:
        - name: signoz-db
          mountPath: /var/lib/signoz
      volumes:
      - name: signoz-db
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: signoz-otel-collector
  namespace: ms
  labels:
    app: signoz-otel-collector
spec:
  ports:
  - port: 4317
    name: grpc
  - port: 4318
    name: http
  selector:
    app: signoz-otel-collector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: signoz-otel-collector
  namespace: ms
  labels:
    app: signoz-otel-collector
spec:
  selector:
    matchLabels:
      app: signoz-otel-collector
  template:
    metadata:
      labels:
        app: signoz-otel-collector
    spec:
      containers:
      - name: otel-collector
        image: signoz/signoz-otel-collector:v0.129.12
        ports:
        - containerPort: 4317
        - containerPort: 4318
        args: ["--config", "/etc/otel-collector-config.yaml"]
        volumeMounts:
        - name: otel-collector-config
          mountPath: /etc/otel-collector-config.yaml
          subPath: config.yaml
      volumes:
      - name: otel-collector-config
        configMap:
          name: otel-collector-config
